--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Site2</title>
   </head>
   <body>
-    <h1>NEETHIKA</h1>
+    <h1>Sathvika</h1>
     <h2>is</h2>
-    <h1>BURA</h1>
+    <h1>❤️</h1>
   </body>
 </html>
